@@ -118,3 +118,8 @@ last_updated                  DATE       null,
 data_value                    CLOB            null,
 constraint PK_SESSION primary key (session_id)
 );
+
+-- ==============================================================
+--  Function: unix_timestamp
+-- ==============================================================
+CREATE FUNCTION unix_timestamp (datum IN VARCHAR2) RETURN NUMBER IS BEGIN RETURN ROUND((TO_DATE(datum) - TO_DATE('1970-01-01 00:00:00','YYYY-MM-DD HH24:MI:SS'))*86400,0); END;;
