@@ -111,6 +111,7 @@ INSERT INTO permission VALUES (101, 'orgmgr_edit', '', 12);
 INSERT INTO permission VALUES (102, 'orgmgr_update', '', 12);
 INSERT INTO permission VALUES (103, 'orgmgr_delete', '', 12);
 INSERT INTO permission VALUES (104, 'orgmgr_list', '', 12);
+INSERT INTO permission VALUES (239, 'passwordmgr_redirecttoedit', '', 12);
 INSERT INTO permission VALUES (105, 'passwordmgr_edit', '', 12);
 INSERT INTO permission VALUES (106, 'passwordmgr_update', '', 12);
 INSERT INTO permission VALUES (107, 'passwordmgr_retrieve', '', 12);
@@ -292,6 +293,7 @@ INSERT INTO role_permission VALUES (44, 2, 118);
 INSERT INTO role_permission VALUES (45, 2, 121);
 INSERT INTO role_permission VALUES (46, 2, 105);
 INSERT INTO role_permission VALUES (47, 2, 106);
+INSERT INTO role_permission VALUES (35, 2, 239);
 INSERT INTO role_permission VALUES (48, 2, 142);
 INSERT INTO role_permission VALUES (49, 2, 143);
 INSERT INTO role_permission VALUES (50, 2, 67);
@@ -346,6 +348,7 @@ INSERT INTO user_permission VALUES (30, 2, 118);
 INSERT INTO user_permission VALUES (31, 2, 121);
 INSERT INTO user_permission VALUES (32, 2, 105);
 INSERT INTO user_permission VALUES (33, 2, 106);
+INSERT INTO user_permission VALUES (43, 2, 239);
 INSERT INTO user_permission VALUES (34, 2, 142);
 INSERT INTO user_permission VALUES (35, 2, 143);
 INSERT INTO user_permission VALUES (36, 2, 67);
