@@ -15,6 +15,8 @@ IMPROVEMENTS
 BUGFIXES
 
 IMPROVEMENTS
+30-08-05    Added the db function unix_timestamp for oracle and postgres (Tobias Kuckuck)
+30-08-05    Added missing passwordmgr_redirecttoedit permission (Tobias Kuckuck)
 29-08-05    Renamed ConfigMgr's '_insert' method to '_update' to correctly reflect action, 
             sql upgrade file provided in etc/sql_upgrades
 29-08-05    Added some permission descriptions (Rolandas Burbulis)
